added booking for operator and user, added tests
